--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="public/stylesheets/style.css" /> 
     <link rel="stylesheet" href="public/stylesheets/events.css" />
     <title>Pawnee, IN Parks and Rec</title>
@@ -35,8 +36,8 @@
           <div class="calendar">
             <div class="front">
               <div class="current-date">
-                <h1>Friday 15th</h1>
-                <h1>January 2016</h1>
+                <h1>Wednesday 13th</h1>
+                <h1>February 2022</h1>
               </div>
 
               <div class="current-month">
@@ -66,7 +67,20 @@
                     <span>05</span>
                     <span class="event">06</span>
                     <span>07</span>
-                    <span>08</span>
+                    <span>
+                      <p class="modal-button" href="#myModal1">08</p>
+
+                      <div id="myModal1" class="modal">
+
+                        <div class="modal-content">
+                          <span class="close">X</span>
+                          <p class="event-modal">
+                            Lil' Sebestian Photo Shoot at Sullivan Street Park, 3:00 PM
+                          </p>
+                        </div>
+
+                      </div>
+                    </span>
                     <span>09</span>
                     <span>10</span>
                   </div>
@@ -74,9 +88,22 @@
                   <div class="third">
                     <span>11</span>
                     <span>12</span>
-                    <span>13</span>
+                    <span class="active">
+                      <p class="modal-button" href="#myModal2">13</p>
+
+                      <div id="myModal2" class="modal">
+
+                        <div class="modal-content">
+                          <span class="close">X</span>
+                          <p class="event-modal">
+                            Ron Swanson Employee Appreciation BBQ, 4:00 PM
+                          </p>
+                        </div>
+                      </div>
+
+                    </span>
                     <span>14</span>
-                    <span class="active">15</span>
+                    <span>15</span>
                     <span>16</span>
                     <span>17</span>
                   </div>
