--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@
                 it didnt have mayonnaise.
               </p>
             </li>
+            <li>
+              <p class="info-text">
+                There's a huge hole the size of a baseball field on Sullivan Street and when I jumped into it, I got hurt. 
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                There is a disturbing lack of benches in Ramsett park. I want to sit more!
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Why don't you have hand dryers in the park bathrooms? They are so much more sanitary than paper towels. Anyone knows that!
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                I made something in one of your pottery classes, and its terrible!
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                My dog went to one of your parks and ate another dogs feces. I'm going to sue you for that. 
+              </p>
+            </li>
           </ul>
         </div>
       </div>
