--- a/old_site.html
+++ b/old_site.html
@@ -27,6 +27,7 @@
             <p>
                 <a href="https://youtu.be/VqESKXVIQJg" target="_blank">Critter Cam</a>
             </p>
+            <p><a href="./index.html">New Page</a></p>
         </div>
     <hr style="border-color: black;">
 
