--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
                       <div id="myModal1" class="modal">
 
                         <div class="modal-content">
-                          <span class="close">X</span>
+                          <p class="close">X</p>
                           <p class="event-modal">
                             Lil' Sebestian Photo Shoot at Sullivan Street Park, 3:00 PM
                           </p>
