--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <h1>This Month's Headlines</h1>
           <ul>
             <li>
-              <p class="info-text">Local Man Catches Turtle Flu</p>
+              <p class="info-text">
+                Pawnee Man Catches Turtle Flu
+              </p>
             </li>
             <li>
               <p class="info-text">Ice Town Mayor Comes to Pawnee</p>
@@ -52,6 +54,51 @@
             <li>
               <p class="info-text">
                 You See a Horse, We See a Hero aka Lil Sebastian
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                New Locally Created Liquor, Snake Juice, Makes It's Debut 
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Pawnee Man Falls Into Construction Pit
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Pawnee Band Mouse Rat Performing in Indianapolis 
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Who is Duke Silver?
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Eagleton Reabsorbed Back Into The Pawnee
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Pawnee Parks Department Leads Play60 for Pawnee Children With Indianapolis Colts
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Complaints Written by Typewriter Appear Across Pawnee
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Pounch Burger Introduces New 512oz Child Size Soda for $1.59
+              </p>
+            </li>
+            <li>
+              <p class="info-text">
+                Leslie Knope Annouces Bid for City Council Seat
               </p>
             </li>
           </ul>
