--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
     <title>Pawnee, IN Parks and Rec</title>
   </head>
 
-  <body>
+  <body style="background-color: #2b4450;">
     <header>
       <div class="banner">
         <img
